fixed sizeing on mobile and tablet

--- a/src/components/Elements/Blocks/Blocks.module.css
+++ b/src/components/Elements/Blocks/Blocks.module.css
@@ -13,6 +13,13 @@
 	margin-right: auto;
 }
 
+
+@media (max-width: 576px) {
+    .box_outer{
+        margin-bottom: 6rem;
+    }
+
+}
 .caption a {
     overflow: hidden;
     font-size: 100%;
