--- a/src/components/Elements/Text/Text.css
+++ b/src/components/Elements/Text/Text.css
@@ -12,16 +12,35 @@ p{
     max-width: 80%;
     min-width: 15rem;
     margin: auto;
+    margin-top: 2rem;
     margin-bottom: 5rem;
 }
 
-@media (max-width: 800px) {
+@media (max-width: 1200px) {
     p{
-        line-height: 1.5;
-        font-size: 110%;
+        font-size: 130%;
+        line-height: 2;
     }
     .textBox{
-        max-width: 90%;
+        max-width: 80%;
+        min-width: 15rem;
+        margin: auto;
+        margin-top: 0rem;
+        margin-bottom: 5rem;
+        
+    }
+    
+
+}
+@media (max-width: 576px) {
+    p{
+        line-height: 1.2;
+        font-size: 100%;
+    }
+    .textBox{
+        max-width: 95%;
+        margin-top: 0;
+        margin-bottom: 0.5rem;
         
     }
     
