--- a/src/pages/Layout.module.css
+++ b/src/pages/Layout.module.css
@@ -19,8 +19,8 @@
 
 @media (max-width: 800px) {
   .title{
-    font-size: 95%;
-    padding-left: 0%;
+    font-size: 1.2rem;
+    padding-right: 0.2rem;
     margin-right: 0px;
     
   }
